# reasoning_embedder

./: .gitignore  README.md  explore_reasonir_dataset.ipynb  prepare_dataset.py  pyproject.toml  requirements.txt  train.py
agents/: AGENT_LOG.md  TEMPLATE.md
changelog/: feat-training-refactor.md
docs/: TOKEN_PRUNING_METHODS_REPORT.md
examples/: token_pruning_benchmark.py  token_pruning_integration.py
notebooks/: Eval-Baseline.ipynb  Eval_Baseline_colab.ipynb  data_minimal.ipynb  explore_prepared_dataset.ipynb  explore_reasonir_dataset.ipynb  pylate_minimal_example.ipynb  token_pruning_demo.ipynb
reasoning_embedder/: __init__.py
reasoning_embedder/cli/: train.py
reasoning_embedder/data/: prepare.py
reasoning_embedder/models/: compat.py
reasoning_embedder/optimization/: __init__.py  token_pruning.py
reasoning_embedder/training/: build.py  config.py  data.py
tests/: test_token_pruning.py
training/: build.py  config.py  data.py
